--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,16 @@ section h1{
 
 /* Hasta aca Hero section */
 
+/* Seccion para los filtros*/
+
+section.main_card_container section.talle-filters{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 30px;
+  background-color: var(--beige);
+}
+
 /*Comienza el Main section con CARDS js*/
 
 section.card-container{     /* ACA HACER FLEX DIRECTION COLUMN PARA MOBILE*/
@@ -115,9 +125,16 @@ div.card{
   background-color: var(--gris-claro);
 
 }
+div.card h3{
+  text-transform: capitalize;
+}
+
+div.card h4 span{
+  text-transform: capitalize;
+}
 
 img.img-vestido{
-  height: 80%;
+  width: 70%;
   border-radius: 0.5em;
 
 }
@@ -146,6 +163,56 @@ button.btn-reserva:active{
 
 
 /* Hasta aca con section CARDS */
+
+
+
+
+/* Section del carrito*/
+section.carro-container{
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: space-evenly;
+  padding: 30px;
+  min-height: 20vh;
+  height: max-content;
+}
+#listaCarrito li{
+  list-style-type: disc;
+  padding: 5px;
+  margin: 10px 0px 10px 30px;
+  text-transform: capitalize;
+}
+
+.carrito-visible{
+  border: 3px solid var(--beige);
+  border-radius: 0.3em;
+  margin: 5px;
+  padding: 7px;
+  width: 15vw;
+  text-align: center;
+}
+
+section.carro-container button{
+  background-color: var(--beige);
+  border-radius: 0.3em;
+  margin: 5px;
+  padding: 7px;
+  width: 15vw;
+  text-align: center;
+  font-size: 20px;
+}
+section.carro-container button:hover{
+  transform: scale(110%);
+  cursor: pointer;
+}
+section.carro-container button:active{
+  transform: scale(110%);
+  cursor: pointer;
+  border: 2px inset var(--beige);
+}
+
+
 
 /*Footer*/
 footer{
