--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,8 @@ form button{
     border: none;
     border-radius: 0.1em;
     height: 30px;
-    width: 70px;
+    width: fit-content;
+    padding: 0px 8px;
     background-color: var(--gris-claro);
     transition: 0.2s;
 }
@@ -91,12 +92,28 @@ section h1{
 
 /* Seccion para los filtros*/
 
+section.main_card_container{
+  display: grid;
+  grid-template-columns: 20vw 1fr;
+  grid-template-rows: 1fr;
+  justify-items: center;
+  align-items: start;
+  padding: 0;
+}
+
+
 section.main_card_container section.talle-filters{
   display: flex;
-  align-items: center;
-  justify-content: space-around;
+  flex-direction: column;
+  align-items: baseline;
+  justify-content: start;
   padding: 30px;
-  background-color: var(--beige);
+}
+section.talle-filters div{
+  margin: 10px 5px 20px 5px;
+}
+section.talle-filters label{
+  margin: 5px;
 }
 
 /*Comienza el Main section con CARDS js*/
@@ -120,6 +137,8 @@ div.card{
   margin: 20px;
   height: 60vh;
   width: 20vw;
+  min-width: 280px;
+  min-height: 420px;
   border: 3px solid var(--beige);
   border-radius: 0.5em;
   background-color: var(--gris-claro);
@@ -135,6 +154,7 @@ div.card h4 span{
 
 img.img-vestido{
   width: 70%;
+  height: fit-content;
   border-radius: 0.5em;
 
 }
