--- a/css/stylemain.css
+++ b/css/stylemain.css
@@ -16,6 +16,9 @@
     --gris-claro: #f0ede8;
 
 }
+body{
+  background-color: var(--gris-claro);
+}
 
 
 /*NAV hacer el buscador un filtro*/
@@ -94,7 +97,7 @@ section h1{
 
 section.main_card_container{
   display: grid;
-  grid-template-columns: 20vw 1fr;
+  grid-template-columns: 10vw 1fr;
   grid-template-rows: 1fr;
   justify-items: center;
   align-items: start;
@@ -104,10 +107,12 @@ section.main_card_container{
 
 section.main_card_container section.talle-filters{
   display: flex;
+  width: 100%;
+  height: max-content;
   flex-direction: column;
   align-items: baseline;
   justify-content: start;
-  padding: 30px;
+  padding: 10px;
 }
 section.talle-filters div{
   margin: 10px 5px 20px 5px;
@@ -153,8 +158,7 @@ div.card h4 span{
 }
 
 img.img-vestido{
-  width: 70%;
-  height: fit-content;
+  height: 80%;
   border-radius: 0.5em;
 
 }
@@ -188,6 +192,25 @@ button.btn-reserva:active{
 
 
 /* Section del carrito*/
+
+a.checkout-boton{
+  background-color: var(--beige);
+  text-decoration: none;
+  color: black;
+  border:2px outset var(--beige);
+  border-radius: 0.3em;
+  margin: 5px;
+  padding: 7px;
+  width: 15vw;
+  text-align: center;
+  font-size: 20px;
+}
+a.checkout-boton:hover{
+  transform: scale(110%);
+  cursor: pointer;
+}
+
+
 section.carro-container{
   display: flex;
   flex-direction: column;
@@ -264,7 +287,5 @@ footer iframe{
     height: 90%;
     border-radius: 1em;
 }
-
-
 
 
